PR/54766: elo: Broken mime-hooks handling in mail(1) pullup-9.